Update README to reflect current project features and architecture